styles/Navbar.module.css
.container {
  height: 100px;
  padding: 0px 50px;
  background-color: #d1411e;
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: sticky;
  top: 0;
  z-index: 99;
}

.item {
  flex: 1;
  display: flex;
  align-items: center;
}

.item:nth-child(2) {
  flex: 3;
}
.item:last-child {
  justify-content: flex-end;
}

.callButton {
  background-color: #fff;
  border-radius: 50%;
  padding: 10px;
}

.texts {
  margin-left: 20px;
  color: #fff;
}

.text:first-child {
  font-size: 12px;
  font-weight: 500;
}

.text:last-child {
  font-size: 20px;
  font-weight: bold;
}

.list {
  padding: 0;
  display: flex;
  align-items: center;
  list-style: none;
  color: #fff;
}

.listItem {
  margin: 20px;
  font-weight: 500;
}

.cart {
  position: relative;
}

.counter {
  position: absolute;
  top: -10px;
  right: -10px;
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background-color: #fff;
  color: #d1411e;
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: bold;
}

/*  mobile media query*/
@media screen and (max-width: 480px) {
  .item:nth-child(2) {
    display: none;
  }

  .item:nth-child(1) {
    flex: 3;
  }
}

